--- a/analiseficha.html
+++ b/analiseficha.html
@@ -468,15 +468,36 @@ const EMAILS_AUTORIZADOS_PRECO_IDEAL = [
 
 let usuarioEmailAtual = null;
 
+async function carregarUsuarioAuth() {
+  // força o Supabase a carregar a sessão no iframe
+  const { data: sessionData } = await sb.auth.getSession();
+
+  if (!sessionData.session) {
+    console.warn("❌ Sessão não encontrada no iframe");
+    usuarioEmailAtual = null;
+    return;
+  }
+
+  const { data: { user } } = await sb.auth.getUser();
+
+  usuarioEmailAtual = user?.email || null;
+
+  console.log("✅ EMAIL AUTH NO IFRAME:", usuarioEmailAtual);
+}
+
+// roda imediatamente
+carregarUsuarioAuth();
+
+// garante atualização se a sessão mudar
+sb.auth.onAuthStateChange((_event, session) => {
+  usuarioEmailAtual = session?.user?.email || null;
+});
+
 
 const sb = supabase.createClient(
   "https://dxkszikemntfusfyrzos.supabase.co",
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
-(async () => {
-  const { data: { user } } = await sb.auth.getUser();
-  usuarioEmailAtual = user?.email || null;
-})();
 
 /* =====================================================
    UTIL
