--- a/analiseficha.html
+++ b/analiseficha.html
@@ -461,6 +461,11 @@ button{
 </div>
 
 <script>
+const sb = supabase.createClient(
+  "https://dxkszikemntfusfyrzos.supabase.co",
+  "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
+);
+
 const EMAILS_AUTORIZADOS_PRECO_IDEAL = [
   "leonardo_henrique1@hotmail.com",
   "souzanalbert58@gmal.com"
@@ -468,8 +473,10 @@ const EMAILS_AUTORIZADOS_PRECO_IDEAL = [
 
 let usuarioEmailAtual = null;
 
-async function carregarUsuarioAuth() {
-  // força o Supabase a carregar a sessão no iframe
+
+
+
+   async function carregarUsuarioAuth() {
   const { data: sessionData } = await sb.auth.getSession();
 
   if (!sessionData.session) {
@@ -479,25 +486,17 @@ async function carregarUsuarioAuth() {
   }
 
   const { data: { user } } = await sb.auth.getUser();
-
   usuarioEmailAtual = user?.email || null;
 
   console.log("✅ EMAIL AUTH NO IFRAME:", usuarioEmailAtual);
 }
 
-// roda imediatamente
 carregarUsuarioAuth();
 
-// garante atualização se a sessão mudar
 sb.auth.onAuthStateChange((_event, session) => {
   usuarioEmailAtual = session?.user?.email || null;
 });
 
-
-const sb = supabase.createClient(
-  "https://dxkszikemntfusfyrzos.supabase.co",
-  "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
-);
 
 /* =====================================================
    UTIL
@@ -1128,8 +1127,15 @@ setTimeout(() => {
   if (!input) return;
 
   const valorInicial = Number(p.preco_ideal || 0);
-  const autorizado =
-    EMAILS_AUTORIZADOS_PRECO_IDEAL.includes(usuarioEmailAtual);
+   if (!usuarioEmailAtual) {
+  console.warn("⏳ Aguardando auth para liberar preço ideal");
+  return;
+}
+
+const autorizado =
+  usuarioEmailAtual &&
+  EMAILS_AUTORIZADOS_PRECO_IDEAL.includes(usuarioEmailAtual);
+
 
   // ❌ não autorizado → bloqueia edição
   if (!autorizado) {
