--- a/analiseficha.html
+++ b/analiseficha.html
@@ -468,7 +468,7 @@ const sb = supabase.createClient(
 
 const EMAILS_AUTORIZADOS_PRECO_IDEAL = [
   "leonardo_henrique1@hotmail.com",
-  "souzanalbert58@gmal.com"
+  "souzanalbert58@gmail.com"
 ];
 
 let usuarioEmailAtual = null;
