--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -473,12 +473,27 @@ function render(){
   const por=Number(rendimentoFinal.value||1);
   const preco=Number(precoVenda.value||0);
 
-  listaIng.innerHTML=ingredientes.map(i=>`
-    <div class="ing">
-      <span>${i.nome} (${i.quantidade} ${i.unidade})</span>
+listaIng.innerHTML=ingredientes.map((i,idx)=>`
+  <div class="ing">
+    <span>${i.nome} (${i.quantidade} ${i.unidade})</span>
+    <div style="display:flex;gap:10px;align-items:center">
       <strong>${moeda(i.custo_total)}</strong>
+      <button
+        onclick="removerIngrediente(${idx})"
+        style="
+          background:#ef4444;
+          color:#fff;
+          border:none;
+          border-radius:10px;
+          padding:6px 10px;
+          cursor:pointer;
+          font-weight:800
+        "
+      >✕</button>
     </div>
-  `).join("");
+  </div>
+`).join("");
+
 
   cmvTotal.textContent=moeda(cmv);
   cmvUnit.textContent=moeda(cmv/por);
@@ -746,7 +761,14 @@ function fecharClone(){
   fichaSelecionada = null;
 }
 
+function removerIngrediente(index){
+  ingredientes.splice(index,1);
+  render();
+}
 
+
+
+  
 
 
 
