--- a/analiseficha.html
+++ b/analiseficha.html
@@ -656,6 +656,20 @@ c.innerHTML = `
   <div class="card-body">
 
     <h3>${p.nome}</h3>
+${p.descricao ? `
+  <p style="
+    font-size:13px;
+    color:#64748b;
+    line-height:1.3;
+    margin:4px 0 8px;
+    display:-webkit-box;
+    -webkit-line-clamp:2;
+    -webkit-box-orient:vertical;
+    overflow:hidden;
+  ">
+    ${p.descricao}
+  </p>
+` : ``}
 
     <!-- LINHA 1 — STATUS FINANCEIRO -->
     <div class="badges primary">
@@ -795,6 +809,22 @@ const nutri = {
 
 mBody.innerHTML = `
 <h2>${p.nome}</h2>
+<h3>Descrição do prato (texto do cardápio)</h3>
+
+<textarea
+  id="descricaoPrato"
+  placeholder="Ex: Salmão grelhado com arroz japonês e molho teriyaki."
+  style="
+    width:100%;
+    min-height:70px;
+    padding:14px;
+    border-radius:14px;
+    border:1px solid var(--border);
+    font-size:14px;
+    font-family:Inter,sans-serif;
+    resize:vertical;
+  "
+>${p.descricao || ""}</textarea>
 
 <div style="margin:14px 0">
   <label style="font-weight:800;font-size:13px">
@@ -1122,6 +1152,28 @@ setTimeout(() => {
       .eq("id", pratoAtual.id);
   };
 }, 0);
+
+
+setTimeout(() => {
+  const desc = document.getElementById("descricaoPrato");
+  if (!desc) return;
+
+  const valorInicial = (p.descricao || "").trim();
+
+  desc.onblur = async () => {
+    const textoAtual = desc.value.trim();
+    if (textoAtual === valorInicial) return;
+
+    await sb
+      .from("buffet")
+      .update({ descricao: textoAtual })
+      .eq("id", pratoAtual.id);
+
+    await carregarPratos();
+    renderLista();
+  };
+}, 0);
+
 setTimeout(async () => {
   const input = document.getElementById("precoIdealInput");
   if (!input) return;
