--- a/cardapio.html
+++ b/cardapio.html
@@ -19,6 +19,8 @@
   --radius:18px;
   --shadow:0 20px 60px rgba(0,0,0,.6);
 }
+
+/* Reset */
 *{box-sizing:border-box}
 body{
   margin:0;
@@ -52,6 +54,7 @@ body{scrollbar-width:none}
   padding:0 18px;
   font-weight:700;
   outline:none;
+  box-shadow:inset 0 0 0 1px rgba(255,255,255,.02);
 }
 .search::placeholder{color:#777}
 
@@ -64,6 +67,7 @@ body{scrollbar-width:none}
   padding-bottom:8px;
 }
 .cats::-webkit-scrollbar{height:0}
+
 .cat{
   flex:0 0 auto;
   padding:10px 14px;
@@ -77,7 +81,8 @@ body{scrollbar-width:none}
   cursor:pointer;
   transition:.15s ease;
 }
-.cat.active,.cat:hover{
+.cat.active,
+.cat:hover{
   border-color:var(--gold);
   color:var(--gold);
   box-shadow:0 0 0 1px var(--gold-soft), 0 8px 24px rgba(212,175,55,.25);
@@ -102,34 +107,111 @@ body{scrollbar-width:none}
   cursor:pointer;
 }
 .card:active{transform:scale(.98)}
-.thumb{width:100%;aspect-ratio:1/1;object-fit:cover;background:#000}
-.body{padding:12px}
-.name{font-weight:900;letter-spacing:.02em;font-size:14px;margin:0 0 6px}
-.desc{
-  font-size:12px;color:#9ca3af;line-height:1.35;
-  display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;
+
+.thumb{
+  width:100%;
+  aspect-ratio:1/1;
+  object-fit:cover;
+  background:#000;
 }
-.price{margin-top:8px;font-weight:900;color:var(--gold);font-size:15px}
+
+.body{
+  padding:12px;
+}
+
+.name{
+  font-weight:900;
+  letter-spacing:.02em;
+  font-size:14px;
+  margin:0 0 6px;
+}
+
+.desc{
+  font-size:12px;
+  color:#9ca3af;
+  line-height:1.35;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
+  min-height:2.7em;
+}
+
+.price{
+  margin-top:8px;
+  font-weight:900;
+  color:var(--gold);
+  font-size:15px;
+}
 
 /* Modal */
 .modal{
-  position:fixed;inset:0;background:rgba(0,0,0,.8);backdrop-filter:blur(6px);
-  display:none;align-items:flex-end;justify-content:center;z-index:100;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.8);
+  backdrop-filter:blur(6px);
+  display:none;
+  align-items:flex-end;
+  justify-content:center;
+  z-index:100;
 }
 .modal.open{display:flex}
-.modal-box{
-  width:100%;max-width:720px;background:linear-gradient(180deg,#0b0b0c,#000);
-  border-radius:22px 22px 0 0;overflow:hidden;border:1px solid var(--border);
-}
-.modal-img{width:100%;height:260px;object-fit:cover}
-.modal-body{padding:18px}
-.modal-title{font-size:22px;font-weight:900;letter-spacing:.02em}
-.modal-desc{margin-top:8px;color:#cbd5f5;line-height:1.45}
-.modal-price{margin-top:12px;font-size:22px;font-weight:900;color:var(--gold)}
-.close{position:absolute;right:16px;top:10px;font-size:22px;font-weight:900;color:#fff;cursor:pointer}
 
-@media(min-width:700px){.grid{grid-template-columns:repeat(3,1fr)}}
-@media(min-width:1024px){.grid{grid-template-columns:repeat(4,1fr)}}
+.modal-box{
+  width:100%;
+  max-width:720px;
+  background:linear-gradient(180deg,#0b0b0c,#000);
+  border-radius:22px 22px 0 0;
+  overflow:hidden;
+  border:1px solid var(--border);
+}
+
+.modal-img{
+  width:100%;
+  height:260px;
+  object-fit:cover;
+}
+
+.modal-body{
+  padding:18px;
+}
+
+.modal-title{
+  font-size:22px;
+  font-weight:900;
+  letter-spacing:.02em;
+}
+
+.modal-desc{
+  margin-top:8px;
+  color:#cbd5f5;
+  line-height:1.45;
+}
+
+.modal-price{
+  margin-top:12px;
+  font-size:22px;
+  font-weight:900;
+  color:var(--gold);
+}
+
+.close{
+  position:absolute;
+  right:16px;
+  top:10px;
+  font-size:22px;
+  font-weight:900;
+  color:#fff;
+  cursor:pointer;
+}
+
+/* Tablet */
+@media(min-width:700px){
+  .grid{grid-template-columns:repeat(3,1fr)}
+}
+@media(min-width:1024px){
+  .grid{grid-template-columns:repeat(4,1fr)}
+}
 </style>
 </head>
 
@@ -160,13 +242,20 @@ const sb = supabase.createClient(
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
 
-const CATS = ["", "PRATO PRINCIPAL","ENTRADA","SOBREMESA","DRINK","SUSHI","ACOMPANHAMENTO"];
-let cache = JSON.parse(localStorage.getItem("cardapio_cache") || "[]");
-let catAtiva = "";
-let termo = "";
+const CATS = [
+  { key:"", label:"TODOS" },
+  { key:"PRATO PRINCIPAL", label:"PRATO PRINCIPAL" },
+  { key:"ENTRADA", label:"ENTRADA" },
+  { key:"SOBREMESA", label:"SOBREMESA" },
+  { key:"DRINK", label:"DRINK" },
+  { key:"SUSHI", label:"SUSHI" },
+  { key:"ACOMPANHAMENTO", label:"ACOMPANHAMENTO" }
+];
+
 let page = 0;
 const PAGE_SIZE = 10;
-let carregando = false;
+let catAtiva = "";
+let termo = "";
 
 const grid = document.getElementById("grid");
 const cats = document.getElementById("cats");
@@ -176,86 +265,20 @@ function moeda(v){
 }
 
 function renderCats(){
-  cats.innerHTML = ["TODOS",...CATS.filter(Boolean)].map(c=>`
-    <button class="cat ${c===catAtiva||(!c&&catAtiva==="")?'active':''}"
-      data-key="${c}">
-      ${c || "TODOS"}
+  cats.innerHTML = CATS.map(c => `
+    <button class="cat ${c.key===catAtiva?'active':''}"
+      onclick="setCat('${c.key.replace(/'/g,"\\'")}')">
+      ${c.label}
     </button>
   `).join("");
-
-  // Long-press de 20s no TODOS para atualizar cache
-  const btnTodos = cats.querySelector('[data-key=""]');
-  let timer=null;
-  btnTodos.onmousedown = btnTodos.ontouchstart = () => {
-    timer = setTimeout(async ()=>{
-      localStorage.removeItem("cardapio_cache");
-      cache = [];
-      await fetchAll();
-      resetAndRender();
-      alert("🔄 Cardápio atualizado do servidor.");
-    }, 20000);
-  };
-  btnTodos.onmouseup = btnTodos.ontouchend = () => clearTimeout(timer);
-
-  cats.querySelectorAll(".cat").forEach(btn=>{
-    btn.onclick = ()=>{
-      catAtiva = btn.dataset.key || "";
-      resetAndRender();
-      renderCats();
-    };
-  });
 }
 
-async function fetchAll(){
-  if (carregando) return;
-  carregando = true;
-
-  const { data, error } = await sb
-    .from("buffet")
-    .select("id, nome, descricao, preco_venda, foto_url, tipo, ativo")
-    .eq("ativo", true)
-    .order("created_at", { ascending:false });
-
-  if (error) { console.error(error); carregando=false; return; }
-
-  // dedupe por id
-  const map = {};
-  [...cache, ...(data||[])].forEach(p => map[p.id] = p);
-  cache = Object.values(map);
-
-  localStorage.setItem("cardapio_cache", JSON.stringify(cache));
-  carregando = false;
-}
-
-function resetAndRender(){
+function setCat(k){
+  catAtiva = k;
   page = 0;
   grid.innerHTML = "";
+  renderCats();
   loadMore();
-}
-
-function loadMore(){
-  const base = cache
-    .filter(p => !catAtiva || p.tipo === catAtiva)
-    .filter(p => !termo || p.nome.toLowerCase().includes(termo.toLowerCase()));
-
-  const slice = base.slice(page*PAGE_SIZE, page*PAGE_SIZE + PAGE_SIZE);
-
-  slice.forEach(p=>{
-    const d = document.createElement("div");
-    d.className = "card";
-    d.onclick = () => openModal(p);
-    d.innerHTML = `
-      <img class="thumb" src="${p.foto_url||""}">
-      <div class="body">
-        <div class="name">${p.nome}</div>
-        <div class="desc">${p.descricao||""}</div>
-        <div class="price">${moeda(p.preco_venda)}</div>
-      </div>
-    `;
-    grid.appendChild(d);
-  });
-
-  if (slice.length) page++;
 }
 
 function openModal(p){
@@ -267,24 +290,58 @@ function openModal(p){
 }
 function closeModal(){ modal.classList.remove("open"); }
 
-/* Infinite scroll render-only */
-window.addEventListener("scroll", ()=>{
+async function loadMore(){
+  const from = page * PAGE_SIZE;
+  const to = from + PAGE_SIZE - 1;
+
+  let q = sb
+    .from("buffet")
+    .select("id, nome, descricao, preco_venda, foto_url, tipo, ativo")
+    .eq("ativo", true)
+    .order("created_at", { ascending:false })
+    .range(from, to);
+
+  if (catAtiva) q = q.eq("tipo", catAtiva);
+  if (termo) q = q.ilike("nome", `%${termo}%`);
+
+  const { data, error } = await q;
+  if (error) return console.error(error);
+
+  (data || []).forEach(p => {
+    const d = document.createElement("div");
+    d.className = "card";
+    d.onclick = () => openModal(p);
+    d.innerHTML = `
+      <img class="thumb" src="${p.foto_url || ""}">
+      <div class="body">
+        <div class="name">${p.nome}</div>
+        <div class="desc">${p.descricao || ""}</div>
+        <div class="price">${moeda(p.preco_venda)}</div>
+      </div>
+    `;
+    grid.appendChild(d);
+  });
+
+  if ((data || []).length) page++;
+}
+
+/* Infinite scroll */
+window.addEventListener("scroll", () => {
   if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight - 600) {
     loadMore();
   }
 });
 
 /* Busca */
-search.oninput = ()=>{
+search.oninput = () => {
   termo = search.value.trim();
-  resetAndRender();
+  page = 0;
+  grid.innerHTML = "";
+  loadMore();
 };
 
-(async ()=>{
-  if (!cache.length) await fetchAll(); // busca do servidor só 1x
-  renderCats();
-  resetAndRender();
-})();
+renderCats();
+loadMore();
 </script>
 
 </body>
